[project]
name = "l4v1"
version = "0.0.3"
description = "A Python library to simplify data-analytics tasks"
authors = [
    { name = "Miro Lavi", email = "info.l4v1@gmail.com" }
]
dependencies = [
    "plotly>=5.20.0",
    "polars>=0.20.19",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
xlsx = [
    "xlsxwriter>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["l4v1"]
