[project]
name = "l4v1"
version = "0.2.2"
description = "A Python library to simplify data-analytics tasks"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "plotly>=6.0.0",
    "polars>=1.22.0",
    "xlsxwriter>=3.2.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.setuptools]
packages = ["l4v1"]
